--- a/index.html
+++ b/index.html
@@ -47,9 +47,22 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Laiken Chetty</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/laiken30" target="_blank"
+            >Laiken Chetty</a
+          >
+          and is
+          <a
+            href="https://github.com/laiken30/first-weather-project"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a
+            href="https://main--weather-project-created-by-laiken.netlify.app/"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
